[package]
name = "cosey"
version = "0.3.1"
authors = ["Nicolas Stalder <n@stalder.io>"]
license = "Apache-2.0 OR MIT"
description = "Data types and serde for public COSE_Keys"
categories = ["embedded", "encoding", "no-std"]
keywords = ["cose", "cbor", "rust", "no-std"]
repository = "https://github.com/ycrypto/cosey"
readme = "README.md"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
heapless-bytes = "0.3.0"
pqcrypto-dilithium = { version = "0.5.0", optional = true}
serde-big-array = "0.5.1"
serde_repr = "0.1"

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]

[dev-dependencies]
cbor-smol = "0.4"
ciborium = "0.2.1"
hex = "0.4.3"
itertools = "0.12.0"
quickcheck = "1.0.3"
serde = "1"

[features]
backend-dilithium = ["dep:pqcrypto-dilithium"]
backend-dilithium2 = ["backend-dilithium"]
backend-dilithium3 = ["backend-dilithium"]
backend-dilithium5 = ["backend-dilithium"]
